--- a/src/css/Booking.css
+++ b/src/css/Booking.css
@@ -1,5 +1,5 @@
 body {
-	background: url("../photo/forest.jpg") no-repeat center center fixed;
+	background: url("Wallpaper/gold1.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
