--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,11 @@
+.jumbotron.jumbotron-fluid {
+	color: #D4CFD1;
+	/* font-family: Verdana, Geneva, sans-serif;
+	font-weight: bold; */
+	background-color: #2E1114;
+	margin-bottom: 0px;	
+}
+
 .nav-link {
 	color: #D4CFD1;
 	font-size: 18px;
@@ -6,11 +14,17 @@
 
 .navbar {
 	background-color: #2E1114;
-	height: 100px
+/* 	height: 100px; */
+	z-index: 9999;	
 }
 
 .custom-toggler .navbar-toggler-icon {
 	background-image:
 		url( 
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(212, 207, 209, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar ul {
+  display: flex;
+  justify-content: space-around;
 }
