--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -1,55 +1,68 @@
+
 .carousel-inner img {
 	width: 100%;
 	height: 100%;
 }
 
+.img-fluid {
+	cursor: pointer;
+}
+
+.fa {
+	padding: 20px;
+	font-size: 20px;
+	text-align: center;
+	border-radius: 50%;
+}
+
+.fa:hover {
+	opacity: 0.5;
+}
+
+.fa-instagram {
+	background: #125688;
+	color: white;
+}
+
 h1 {
-	color: #20B2AA;
+	color: white;
+}
+
+.mr-4 {
+	color: black;
 }
 
 #demo {
 	margin: auto;
-	width: 80%;
-	height: 80%;
-}
-
-table, th, td {
-margin: auto;
-	border: 1px solid black;
-	padding: 50px;
-}
-
-table {
-	border-spacing: 200px;
-}
-
-body {
-	background: url("../photo/forest.jpg") no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
-}
-
-#myDIV {
-	animation: mymove 5s infinite;
-}
-
-@
-keyframes mymove { 50% {
-	text-shadow: 10px 20px 30px blue;
-}
-
-}
-.center {
-	position: absolute;
-	left: 0;
-	top: 50%;
 	width: 100%;
-	text-align: center;
-	font-size: 18px;
+	height: 100%;
 }
 
-.card-body {
+.row {
+	margin: auto;
+	text-align: center;
+}
+
+.p-2 {
 	background-color: black;
+}
+
+/* body { */
+/*     background: url("Wallpaper/maroon4.jpg") no-repeat center center fixed; */
+
+/* 	-webkit-background-size: cover; */
+/* 	-moz-background-size: cover; */
+/* 	background-size: cover; */
+/* 	-o-background-size: cover; */
+/* } */
+iframe {
+	position: relative;
+	text-align: center;
+}
+
+.card {
+	-moz-border-radius: 2%;
+	-webkit-border-radius: 2%;
+	border-radius: 2%;
+	box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.5);
 }
