--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -1,5 +1,6 @@
 
 .carousel-inner img {
+	text-align: center;
 	width: 100%;
 	height: 100%;
 }
@@ -33,6 +34,7 @@
 	margin: auto;
 	width: 100%;
 	height: 100%;
+	text-align: center;
 }
 
 .row {
