--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -1,9 +1,8 @@
 
-.carousel-inner img {
-	text-align: center;
-	width: 100%;
-	height: 100%;
+.carousel-inner {
+text-align: center;
 }
+
 
 .img-fluid {
 	cursor: pointer;
@@ -32,9 +31,8 @@
 
 #demo {
 	margin: auto;
-	width: 100%;
-	height: 100%;
-	text-align: center;
+width:100%; 
+	height:100%;
 }
 
 .row {
@@ -58,7 +56,4 @@ iframe {
 	border-radius: 2%;
 	box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.5);
 }
-.carousel-control-prev-icon,.carousel-control-next-icon {
-	padding: 15px;
 
-}
