--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -18,29 +18,30 @@
 	 
 }
 
-.sign_up_button {
+.sign_up {
+	
+	color: #000000;
 	clear:both; 
 	background-color: #feda6a; 
 	border: 0 none; 
 	border-radius:4px; 
 	transition: all 0.23s ease-in-out 0s; 
-	color: #000000;
-	 cursor: pointer; 
-	 display: inline-block; 
-	 font-size:15px; 
-	 font-weight: normal; 
-	 height: 40px; 
-	 line-height: 32px;
-	 position: fixed;
-	  left: 340px;
-	  bottom: 53px;
-	  padding: 0px 30px; 
-	  text-align: center; 
-	  text-decoration: none; 
-	  vertical-align: top; 
-	  white-space: nowrap; 
-	  width: auto;
+	cursor: pointer; 
+	display: inline-block; 
+	font-size:15px; 
+	font-weight: normal; 
+	height: 40px; 
+	line-height: 32px;  
+	padding: 0px 60px; 
+	text-align: center; 
+	text-decoration: none; 
+	vertical-align: top; 
+	white-space: nowrap; 
+	width: auto;
+	
 }
+	 
+
 .navbar_footer {
 	background-color: none;
 	font-size: 50px;
