--- a/src/css2/Header2.css
+++ b/src/css2/Header2.css
@@ -9,8 +9,13 @@
 }
 
 .display-2 {
-	color: #feda6a;
+	color: #feda6a;		
+	/* color: #D5AD6D; */
+	background: -webkit-linear-gradient(#ae8625, #f7ef8a, #d2ac47);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 	font-family: 'Sacramento';
+	line-height: normal;
 }
 
 .display-6, .lead {
@@ -25,6 +30,9 @@
 	/* font-family: 'Playfair Display'; */
 	font-size: 18px;
 	font-weight: bold;
+	background: -webkit-linear-gradient(#ae8625, #f7ef8a, #d2ac47);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .navbar {
