--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -22,7 +22,8 @@
 	
 	color: #000000;
 	clear:both; 
-	background-color: #feda6a; 
+	/*background-color: #644f5e;*/
+	background-color: #feda6a;
 	border: 0 none; 
 	border-radius:4px; 
 	transition: all 0.23s ease-in-out 0s; 
