--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -22,8 +22,7 @@
 	
 	color: #000000;
 	clear:both; 
-	/*background-color: #644f5e;*/
-	background-color: #feda6a;
+	background-color: #F6F4F5;
 	border: 0 none; 
 	border-radius:4px; 
 	transition: all 0.23s ease-in-out 0s; 
@@ -57,7 +56,7 @@
 }
 
 .footer{
-    background: linear-gradient(to bottom, #393f4d 0%, #1d1e22 74%);
+   background-color: #2E1114;
     width: 100%;
     margin: auto;
 }
@@ -114,7 +113,7 @@
 .open-button {
   font-family: Verdana, Geneva, sans-serif;
   font-weight: bold;
-  background-color: #feda6a	;
+  background-color: #F6F4F5;
   color: black;
   padding: 25px 0px;
   border: none;
