--- a/src/css2/Footer2.css
+++ b/src/css2/Footer2.css
@@ -22,7 +22,8 @@
 	
 	color: #000000;
 	clear:both; 
-	background-color: #F6F4F5;
+	/*background-color: #644f5e;*/
+	background-color: #feda6a;
 	border: 0 none; 
 	border-radius:4px; 
 	transition: all 0.23s ease-in-out 0s; 
@@ -56,7 +57,7 @@
 }
 
 .footer{
-   background-color: #2E1114;
+    background: linear-gradient(to bottom, #393f4d 0%, #1d1e22 74%);
     width: 100%;
     margin: auto;
 }
@@ -113,7 +114,7 @@
 .open-button {
   font-family: Verdana, Geneva, sans-serif;
   font-weight: bold;
-  background-color: #F6F4F5;
+  background-color: #feda6a	;
   color: black;
   padding: 25px 0px;
   border: none;
