--- a/src/css/FooterHome.css
+++ b/src/css/FooterHome.css
@@ -56,7 +56,7 @@
 }
 
 .footer{
-   background-color: #424949;
+   background-color: #2E1114;
     width: 100%;
     margin: auto;
 }
@@ -70,38 +70,32 @@
 	-moz-osx-font-smoothing:grayscale;
 }
 
-.fa-envelope {
-  background: none;
-  color: white;
-  margin-right:40px;
-  font-size:380%;
-}
 
 .fa-facebook {
   background: none;
   color: white;
   margin-right:40px;
-  font-size:380%;
+  font-size:250%;
 }
 
 .fa-instagram {
   background: none;
   color: white;
   margin-right:40px;
-  font-size:380%;
+  font-size:250%;
 }
 
 .fa-soundcloud {
   background: none;
   color: white;
   margin-right:40px;
-  font-size:380%;
+  font-size:250%;
 }
 
 .fa-youtube {
   background: none;
   color: white;
-  font-size:380%;
+  font-size:250%;
 }
 
 
