cleaned files' names

--- a/src/css/Booking.css
+++ b/src/css/Booking.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #83677B;
+	background-color: #393f4d;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -7,5 +7,5 @@ body {
 }
 
 .form {
-	
+	color: #d4d4dc;
 }
