--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -22,7 +22,7 @@
 	
 	color: #000000;
 	clear:both; 
-	background-color: #F6F4F5;
+	background-color: #d2ac47; 
 	border: 0 none; 
 	border-radius:4px; 
 	transition: all 0.23s ease-in-out 0s; 
@@ -32,7 +32,7 @@
 	font-weight: normal; 
 	height: 40px; 
 	line-height: 32px;  
-	padding: 0px 60px; 
+	padding: 0px 40px; 
 	text-align: center; 
 	text-decoration: none; 
 	vertical-align: top; 
@@ -56,7 +56,7 @@
 }
 
 .footer{
-   background-color: #2E1114;
+    background: linear-gradient(to bottom, #393f4d 0%, #1d1e22 74%);
     width: 100%;
     margin: auto;
 }
@@ -113,7 +113,7 @@
 .open-button {
   font-family: Verdana, Geneva, sans-serif;
   font-weight: bold;
-  background-color: #F6F4F5;
+  background-color: #feda6a	;
   color: black;
   padding: 25px 0px;
   border: none;
@@ -122,7 +122,7 @@
   position: fixed;
   bottom: 35px;
   right: 2px;
-  width: 18%;
+  width: 15%;
   z-index: 2;
 }
 
@@ -201,6 +201,7 @@
   max-height: 30%;
   overflow: auto;
 }
+
 
 
 /*!
