--- a/src/css/Booking.css
+++ b/src/css/Booking.css
@@ -1,5 +1,5 @@
-body {
-	background-color: #393f4d;
+.body {
+	
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
