--- a/src/css/Events.css
+++ b/src/css/Events.css
@@ -1,4 +1,4 @@
-  body {
+.body {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 14px;  
    /*  overflow: auto;  */  
