--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,5 +1,3 @@
-=======
-
 ::after,
 ::before {
     box-sizing: border-box
@@ -172,6 +170,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 100%;
+	max-width:500px;
 	
 }
 .popup .close {
