--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -12,6 +12,11 @@
 
 h1{
 	font-size: 25px; 
+	color:#4CAF50
+}
+
+h2{
+	color:#4CAF50;
 }
 
 .button {
@@ -58,6 +63,7 @@ input{
   border: none;
   border-bottom: 2px solid #71db77;
   background-color: #222222;
+  color: white;
 }
 
 a{
