--- a/src/pagesCSS/Admin.css
+++ b/src/pagesCSS/Admin.css
@@ -19,6 +19,19 @@ h2{
 	color: #4CAF50;
 }
 
+h3{
+	font-size: 25px; 
+	color: red;
+	position: absolute;
+  	top: 370px;
+  	left: 680px;
+}
+
+h4{
+	font-size: 20px; 
+	color: red;
+}
+
 input{
 	color: white;
 }
