--- a/src/wizardCSS/progressBar.css
+++ b/src/wizardCSS/progressBar.css
@@ -11,7 +11,7 @@
 #progressbar li {
 	list-style-type: none;
 	font-size: 16px;
-	width: 25%;
+	width: 20%;
 	float: left;
 	position: relative
 }
@@ -40,6 +40,13 @@
 #progressbar #layout:before {
 	font-family: FontAwesome;
 	content: "\f1fc";
+	position: relative;
+	z-index: 1
+}
+
+#progressbar #finish:before {
+	font-family: FontAwesome;
+	content: "\f14a";
 	position: relative;
 	z-index: 1
 }
