--- a/src/wizardCSS/wizard.css
+++ b/src/wizardCSS/wizard.css
@@ -65,4 +65,32 @@ h5{
 	font-style: italic;
 }
 
+.card {
+    background: white;
+    border: 0 none;
+    border-radius: 0px;
+    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.2);
+    padding: 20px 40px 30px 40px;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 3% 20px 3%;
+    position: relative
+}
 
+.end {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 12px 97px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.success {
+	font-size: 18px; 
+	color: black;
+	font-style: italic;
+	}
