modified set layout msg

--- a/src/wizardCSS/wizard.css
+++ b/src/wizardCSS/wizard.css
@@ -99,6 +99,12 @@ h5{
 	color: black;
 	font-style: italic;
 	}
+.setLayout{
+	font-size: 22px; 
+	color: white;
+	font-style: italic;
+}		
+	
 .fs-title{
 	font-size: 36px; 
 	color: black;	
