--- a/src/wizardCSS/progressBar.css
+++ b/src/wizardCSS/progressBar.css
@@ -15,7 +15,7 @@
 #progressbar li {
 	list-style-type: none;
 	font-size: 16px;
-	width: 20%;
+	width: 15%;
 	float: left;
 	position: relative
 }
@@ -37,6 +37,20 @@
 #progressbar #about:before {
 	font-family: FontAwesome;
 	content: "\f2bb";
+    position: relative;
+	z-index: 1
+}
+
+#progressbar #gallery:before {
+	font-family: FontAwesome;
+	content: "\f03e";
+    position: relative;
+	z-index: 1
+}
+
+#progressbar #booking:before {
+	font-family: FontAwesome;
+	content: "\f03a";
     position: relative;
 	z-index: 1
 }
